--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@tanstack/react-router-with-query": "^1.116.0",
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
