--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
-    "lint": "eslint .",
-    "format": "prettier --write .",
+    "format": "biome format --write .",
+    "lint": "biome check .",
+    "lint:ci": "biome ci .",
+    "lint:fix": "biome check --write --unsafe .",
     "db": "drizzle-kit",
     "deps": "pnpm dlx npm-check-updates@latest --interactive --format group",
     "ui": "pnpm dlx shadcn@latest",
