--- a/biome.json
+++ b/biome.json
@@ -1,56 +1,65 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-	"vcs": {
-		"enabled": true,
-		"clientKind": "git",
-		"useIgnoreFile": false
-	},
-	"formatter": {
-		"enabled": true,
-		"indentStyle": "tab",
-		"indentWidth": 2,
-		"lineWidth": 100,
-		"formatWithErrors": false,
-		"include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
-		"ignore": ["**/node_modules/**", "**/.vscode/**", "**/public/**", "**/build/**"]
-	},
-	"organizeImports": {
-		"enabled": true
-	},
-
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true,
-			"suspicious": {
-				"noExplicitAny": "off"
-			},
-			"a11y": {
-				"useValidAnchor": "off",
-				"noSvgWithoutTitle": "off"
-			},
-			"style": {
-				"noNonNullAssertion": "off",
-				"noParameterAssign": "off"
-			}
-		}
-	},
-	"javascript": {
-		"formatter": {
-			"quoteStyle": "double",
-			"trailingCommas": "none"
-		}
-	},
-	"files": {
-		"ignore": [
-			"node_modules/**/*",
-			"src/components/ui/**/*",
-			".vscode",
-			"public",
-			"build/**/*",
-			"pnpm-lock.json",
-			"app.config.*.js",
-			"dist/**/*"
-		]
-	}
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": false
+  },
+  "formatter": {
+    "enabled": true,
+    "indentStyle": "tab",
+    "indentWidth": 2,
+    "lineWidth": 100,
+    "formatWithErrors": false,
+    "include": [
+      "**/*.ts",
+      "**/*.tsx",
+      "**/*.js",
+      "**/*.jsx"
+    ],
+    "ignore": [
+      "**/node_modules/**",
+      "**/.vscode/**",
+      "**/public/**",
+      "**/build/**"
+    ]
+  },
+  "organizeImports": {
+    "enabled": true
+  },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true,
+      "suspicious": {
+        "noExplicitAny": "off"
+      },
+      "a11y": {
+        "useValidAnchor": "off",
+        "noSvgWithoutTitle": "off"
+      },
+      "style": {
+        "noNonNullAssertion": "off",
+        "noParameterAssign": "off"
+      }
+    }
+  },
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "double",
+      "trailingCommas": "none"
+    }
+  },
+  "files": {
+    "ignore": [
+      "node_modules/**/*",
+      "src/components/ui/**/*",
+      ".vscode",
+      "public",
+      "build/**/*",
+      "pnpm-lock.json",
+      "app.config.*.js",
+      "dist/**/*"
+    ]
+  }
 }
