--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.503.0",
     "pg": "^8.14.1",
     "postcss": "^8.5.3",
