change user nav layout

--- a/biome.json
+++ b/biome.json
@@ -27,7 +27,8 @@
 			},
 			"a11y": {
 				"useValidAnchor": "off",
-				"noSvgWithoutTitle": "off"
+				"noSvgWithoutTitle": "off",
+				"useKeyWithClickEvents": "off"
 			},
 			"style": {
 				"noNonNullAssertion": "off",
