--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "drizzle-orm": "^0.42.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.503.0",
+    "next-themes": "^0.4.6",
     "pg": "^8.14.1",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
