--- a/biome.json
+++ b/biome.json
@@ -33,6 +33,9 @@
 			"style": {
 				"noNonNullAssertion": "off",
 				"noParameterAssign": "off"
+			},
+			"complexity": {
+				"noForEach": "off"
 			}
 		}
 	},
