--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,17 @@
 services:
+  db:
+    image: postgres:alpine
+    container_name: dirhamly-db
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: dev
+      POSTGRES_DB: dirhamly
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
   app:
     build:
       context: .
@@ -7,26 +20,16 @@ services:
     restart: unless-stopped
     ports:
       - "3000:3000"
-    environment:
-      - DATABASE_URL=postgres://postgres:postgres@db:5432/dirhamlydb
     depends_on:
       - db
-    volumes:
-      - .:/app
-      - /app/node_modules
-
-  db:
-    image: postgres:alpine
-    container_name: dirhamly-db
-    restart: unless-stopped
     env_file:
       - .env.local
     environment:
-      - DATABASE_URL=${DATABASE_URL} 
-    ports:
-      - "5432:5432"
+      - DATABASE_URL=postgres://postgres:dev@db:5432/dirhamly
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - .:/app
+      - /app/node_modules
+    command: sh -c "pnpm drizzle-kit push --strict --verbose --force && pnpm dev"  
 
 volumes:
   postgres_data:
