feat: add transaction dialog

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "pg": "^8.14.1",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
+    "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
@@ -75,6 +76,7 @@
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-payment-inputs": "^1.1.4",
     "drizzle-kit": "^0.31.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.2",
