--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
+    "drizzle-zod": "^0.8.3",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.503.0",
     "next-themes": "^0.4.6",
