--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
@@ -60,6 +61,7 @@
     "postgres": "^3.4.5",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "recharts": "^2.15.3",
