--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,16 @@ yarn.lock
 .output
 .vinxi
 
+TODO.txt
+
 /build/
 /api/
 /server/build
 /public/build
 .vinxi
+
 # Sentry Config File
 .env.sentry-build-plugin
 /test-results/
 /playwright-report/
-/blob-report/
 /playwright/.cache/
