--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start",
+    "dev": "vite dev --port 3000",
+    "build": "vite build",
+    "start": "node .output/server/index.mjs",
     "format": "biome format --write .",
     "lint": "biome check .",
     "lint:ci": "biome ci .",
@@ -40,10 +40,11 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/postcss": "^4.1.4",
     "@tanstack/react-query": "^5.87.4",
-    "@tanstack/react-router": "^1.131.36",
-    "@tanstack/react-router-devtools": "^1.131.36",
-    "@tanstack/react-start": "^1.131.36",
+    "@tanstack/react-router": "^1.131.40",
+    "@tanstack/react-router-devtools": "^1.131.40",
+    "@tanstack/react-start": "^1.131.40",
     "@tanstack/react-table": "^8.21.3",
+    "@vitejs/plugin-react": "^5.0.2",
     "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -70,7 +71,7 @@
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.7",
     "vaul": "^1.1.2",
-    "vinxi": "0.5.3",
+    "vite": "^7.1.5",
     "zod": "^4.1.5"
   },
   "devDependencies": {
