--- a/components.json
+++ b/components.json
@@ -19,6 +19,7 @@
     "hooks": "@/hooks"
   },
   "registries": {
-    "@blocks": "https://blocks.so/r/{name}.json"
+    "@blocks": "https://blocks.so/r/{name}.json",
+    "@tailark": "https://tailark.com/r/{name}.json"
   }
 }
