--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@tailwindcss/postcss": "^4.1.4",
     "@tanstack/react-query": "^5.87.4",
     "@tanstack/react-router": "^1.131.40",
@@ -56,6 +57,7 @@
     "drizzle-zod": "^0.8.3",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.503.0",
+    "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "pg": "^8.14.1",
     "postcss": "^8.5.3",
