--- a/components.json
+++ b/components.json
@@ -20,6 +20,7 @@
   },
   "registries": {
     "@blocks": "https://blocks.so/r/{name}.json",
-    "@tailark": "https://tailark.com/r/{name}.json"
+    "@tailark": "https://tailark.com/r/{name}.json",
+    "@kokonutui": "https://kokonutui.com/r/{name}.json"
   }
 }
