--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-syntax-highlighter": "^15.6.6",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
@@ -82,6 +83,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-payment-inputs": "^1.1.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "drizzle-kit": "^0.31.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.2",
