--- a/components.json
+++ b/components.json
@@ -21,6 +21,7 @@
   "registries": {
     "@blocks": "https://blocks.so/r/{name}.json",
     "@tailark": "https://tailark.com/r/{name}.json",
-    "@kokonutui": "https://kokonutui.com/r/{name}.json"
+    "@kokonutui": "https://kokonutui.com/r/{name}.json",
+    "@kibo-ui": "https://www.kibo-ui.com/r/{name}.json"
   }
 }
