--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.503.0",
     "motion": "^12.23.12",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.14.1",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
@@ -72,6 +73,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
+    "tesseract.js": "^6.0.1",
     "tw-animate-css": "^1.2.7",
     "vaul": "^1.1.2",
     "vite": "^7.1.5",
@@ -89,5 +91,6 @@
     "tsx": "^4.19.3",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4"
-  }
+  },
+  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
 }
