--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
     "@hookform/resolvers": "^5.2.1",
+    "@paralleldrive/cuid2": "^3.0.4",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.2.3",
@@ -86,7 +87,7 @@
     "@types/react-dom": "^19.0.3",
     "@types/react-payment-inputs": "^1.1.4",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "drizzle-kit": "^0.31.0",
+    "drizzle-kit": "^0.31.8",
     "tsx": "^4.19.3",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4"
