--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-direction": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.13",
@@ -46,6 +47,7 @@
     "@tanstack/react-router-devtools": "^1.131.40",
     "@tanstack/react-start": "^1.131.40",
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.13",
     "@vitejs/plugin-react": "^5.0.2",
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
@@ -65,7 +67,7 @@
     "postgres": "^3.4.5",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
-    "react-day-picker": "^9.9.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-syntax-highlighter": "^15.6.6",
